# travlyng

./: README.md  travel_planner.db
admin/: package-lock.json  package.json
admin/src/: App.css  App.tsx  accommodations.tsx  places.tsx  restaurants.tsx  travelPlans.tsx
backend/: .gitignore  Cargo.toml  LLM.md  schema.sql
backend/src/: accommodations.rs  db.rs  main.rs  places.rs  restaurants.rs  search.rs  travel_plans.rs
frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  types.ts
frontend/src/components/: AccommodationsList.tsx  PlacesList.tsx  RestaurantsList.tsx
